fix lyrics not visible in dark background

--- a/user.css
+++ b/user.css
@@ -962,11 +962,11 @@ LYRICS PAGE
 */
 
 .lyrics-lyrics-container .lyrics-lyrics-adLeaderboardIsEnabled .lyrics-lyrics-coverTopBar {
-    --lyrics-color-active: rgb(255, 255, 255);
-    --lyrics-color-inactive: rgb(128, 128, 128);
-    --lyrics-color-passed: rgb(255, 255, 255);
-    --lyrics-color-background: rgb(97, 123, 130);
-    --lyrics-color-messaging: rgb(0, 0, 0);
+    --lyrics-color-active: rgb(255, 255, 255) !important;
+    --lyrics-color-inactive: rgb(128, 128, 128) !important;
+    --lyrics-color-passed: rgb(255, 255, 255) !important;
+    --lyrics-color-background: rgb(97, 123, 130) !important;
+    --lyrics-color-messaging: rgb(0, 0, 0) !important;
 }
 
 /*
